[package]
name = "dsn2_sheet"
version = "0.1.0"
edition = "2021"

[dependencies]
google-sheets4 = "5.0.5"
google-authenticator = "0.4.2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
odbc-api = "8.1.1"
csv = "1.3.0"
termcolor = "1.4.1"
encoding_rs = "0.8.34"



[[bin]]
name = "DSN2CSV"
path = "src/bin/dsn2_csv.rs"

[[bin]]
name = "DSN2Sheet"
path = "src/main.rs"